<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="12dp">

        <ImageView
            android:id="@+id/ivMascota"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/ic_pet_sample"
            android:contentDescription="@string/imagen_mascota" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingStart="12dp">

            <TextView
                android:id="@+id/tvNombre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_mascota"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvRait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/raits_mascota" />
        </LinearLayout>

    </LinearLayout>
</androidx.cardview.widget.CardView>
